--- a/assets/css/layouts/_large-text-banner.scss
+++ b/assets/css/layouts/_large-text-banner.scss
@@ -126,7 +126,7 @@
                 text-align: center;
             }
             &__body{
-                height: 120vw;
+                height: 112vw;
                 width: 80%;
             }
             &__header{
