--- a/assets/css/themes/purple-theme.css
+++ b/assets/css/themes/purple-theme.css
@@ -18,8 +18,8 @@
     --body-dark: #271B44;
     --section-background : #372560;
     --border-color: #7050BB;
-    --text-canari : #8fdf5d;
-    --texture-overlay : #7050BBb4;
+    --text-canari : #e9df58;
+    --texture-overlay : #e9df58e4;
     --background-transparent: #7050BB32;
     --underline-color: #7050BB64;
 }
